minor commenting changes, added kwags

--- a/latex/template.tex
+++ b/latex/template.tex
@@ -1,12 +1,15 @@
 
-\documentclass{jhwhw}
+\documentclass{article}
 
 \usepackage[hyperref,doi=false,url=false,backref,style=alphabetic,maxbibnames=99,backend=bibtex,citestyle=authoryear]{biblatex}
 \usepackage{gensymb} % for Celsius
-\usepackage{listings}
+\usepackage{amsmath}
 
 \usepackage{amssymb} 
 \usepackage{braket}
+\usepackage{geometry}
+\geometry{margin=1in}
+
 % graphics...
 \usepackage{graphicx}
 \usepackage{fancyhdr} % Custom headers and footers
@@ -106,6 +109,7 @@
 \begin{document}
 
 \maketitle
+
 
 %----------------------------------------------------------------------------------------
 
